fix bottom nav bar selected icon not showing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 .Mui-selected,
-.css-18kokwj-MuiButtonBase-root-MuiBottomNavigationAction-root.Mui-selected {
+.css-18kokwj-MuiButtonBase-root-MuiBottomNavigationAction-root.Mui-selected,
+.css-2rsu5c.MuiButtonBase-root.MuiBottomNavigationAction-root.Mui-selected {
   color: white;
 }
 
